--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,15 @@ jobs:
     name: flutter build
     runs-on: ubuntu-latest
     env:
-      JAVA_VERSION: "11.0"
       FLUTTER_VERSION: "2.0.0"
 
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-         java-version: $
+          distribution: 'adopt'
+          java-version: '8'
+          check-latest: true
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: $
