--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,6 @@ jobs:
   build:
     name: flutter build
     runs-on: ubuntu-latest
-    env:
-      FLUTTER_VERSION: "2.0.0"
 
     steps:
       - uses: actions/checkout@v2
@@ -22,7 +20,7 @@ jobs:
           check-latest: true
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: $
+          flutter-version: '2.0.5'
           
       - run: flutter pub get
       - run: flutter analyze
